@@ -24,6 +24,7 @@
             Bangle.js: Fix color palette when rendering 3bpp -> 16bpp
             nRF52840: Fix 900uA UART power draw when shut down
             nRF52: Send XON/XOFF when buffer is less full - reduce likelihood of FIFO_FULL with big MTUs
+            Bangle.js: Fix powerSave regression (should default to 'on', but didn't since 2v10)
 
      2v10 : Bangle.js: Improved HRM calculations - swapped autocorrelation for bandpass filter
             Bangle.js: Significantly improved step counting algorithm using bandpass filter (fix #1846)
